<?xml version="1.0"?>
<package  format="3">
  <name>hesai_ros_driver</name>
  <version>1.0.1</version>
  <description>The hesai_ros_driver_node package</description>
  <maintainer email="zhangyu@hesaitech.com">hesaiwuxiaozhou</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>

  <depend>backward_ros</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_cpp</depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
